minor bug fixes

--- a/index.html
+++ b/index.html
@@ -286,9 +286,9 @@
 	}
 
 	function selectCountry(country){
-		if(currentCountry == country){
+		/*if(currentCountry == country){
 			return;
-		}
+		}*/
 
 		unselectCountry(currentCountry);
 		
