--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
 		// World Bank Indicatiors
 
 		const userAction = async () => {
-			const response = await fetch('http://api.worldbank.org/v2/indicators?per_page=1000&source=2&format=json');
+			const response = await fetch('https://api.worldbank.org/v2/indicators?per_page=1000&source=2&format=json');
 			const myJson = await response.json();
 
 			var controlsInfoCountryIndicators = document.getElementById('controls-info-country-indicators');
@@ -741,7 +741,7 @@
 			if (currentIndicators[indicatorId] != undefined) {
 				return;
 			}
-			fetch('http://api.worldbank.org/v2/countries/all/indicator/' + event.target.value + '?mrnev=1&per_page=400&format=json&date=2012:2020', { mode: 'cors' })
+			fetch('https://api.worldbank.org/v2/countries/all/indicator/' + event.target.value + '?mrnev=1&per_page=400&format=json&date=2012:2020', { mode: 'cors' })
 				.then(response => response.json())
 				.then(data => {
 					var min = undefined;
